--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </main>
         
         <footer class="text-center mt-16 py-8 border-t border-gray-200">
-            <p class="text-gray-500">&copy; 2024 Skrip Instalasi Otomatis. Infografis dibuat dengan 💙.</p>
+            <p class="text-gray-500">&copy; 2025 Skrip Instalasi Otomatis. Infografis dibuat dengan ora turu.</p>
         </footer>
     </div>
 
